Improving tablet UI. Removing most forced font size. Correcting small bugs. Additional change added to prevent LNE (List Notification Exception)